# hybrid-bioprocess-lab

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LEARNING_LOG.md  data-contract.md
notebooks/: hybrid_bioprocess_analysis.ipynb
scripts/: generate_readme_visuals.py
src/hybridbio/: __init__.py  __main__.py  audit.py  cli.py  constraints.py  corrections.py  data.py  evaluation.py  features.py  hybrid.py  inference.py  ingestion.py  lineage.py  mechanistic.py  optuna_sweep.py  promotion.py  pure_ml.py  registry.py  reporting.py  rollout.py  study.py  torch_correction.py  training.py  uncertainty.py
tests/: conftest.py  test_audit.py  test_cli.py  test_flyte_workflow.py  test_flyte_workflow_tasks.py  test_inference.py  test_ingestion.py  test_lineage.py  test_mechanistic.py  test_pure_ml.py  test_registry.py  test_regression.py  test_reporting.py  test_rollout.py  test_scientific_constraints.py  test_study.py  test_torch_correction.py  test_uncertainty.py
workflows/: flyte_training.py  optuna_sweep.py  ray_tune_sweep.py
