[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridbio"
version = "0.4.0"
description = "A personal lab for practising production-grade hybrid bioprocess ML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
tracking = ["mlflow>=2.10", "optuna>=3.5"]
orchestration = ["flytekit>=1.13"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "ANN"]
ignore = [
    "ANN401",
    # N803/N806: pep8-naming wants `xv`, `s`, `y`. Bioprocess convention wants
    # `Xv` (viable cell density), `S` (substrate), `Y` (state matrix). These are
    # the names in the papers, on the P&IDs, and in the heads of the scientists
    # who will read this code. Renaming them to satisfy a linter would make the
    # model measurably harder to review against its own literature.
    #
    # Suppressed deliberately and narrowly, with a reason -- not because the
    # linter was noisy.
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "ANN202"]
"workflows/*" = ["ANN001", "ANN003", "ANN201", "ANN202"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true
files = ["src"]
